Corrections to update endpoint
